# olorin

./: .gitignore  .gitmodules  README.md  dune-project  package.json  playwright.config.js  webpack.config.js
.github/workflows/: build.yml  test.yml
client/: config-noserver.js  grades.js  levels.js  main.js
scripts/: build-static.sh
server/: server.js  sslserver.js
static/: grades.html  index.html  styles.css
test/: README.md  generate-fixtures.js  server.js
test/e2e/: anomaly.spec.js  autosave.spec.js  canvas.spec.js  connectors.spec.js  customlevels.spec.js  cycles.spec.js  delete.spec.js  difficultysave.spec.js  exportimport.spec.js  hints.spec.js  levelcomplete.spec.js  levels.spec.js  saveload.spec.js  unlock.spec.js  unlockmodal.spec.js
test/fixtures/proofs/: 1-1-1.json  1-1-2.json  1-2-1.json  1-2-2.json  1-2-3.json  1-2-4.json  1-2-5.json  1-2-6.json  1-2-7.json  1-2-8.json  1-2-9.json  1-3-1.json  1-3-2.json  1-3-3.json  1-3-4.json  1-3-5.json  1-3-6.json  1-3-7.json  1-3-8.json  1-3-9.json  1-4-1.json  1-4-2.json  1-4-3.json  1-4-4.json  1-4-6.json  1-5-1.json  1-5-2.json  1-5-3.json  1-6-1.json  4-2-7.json
test/helpers/: olorin.js
test/lib/: levels.js
